完成消息列表模板

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name="apple-touch-fullscreen" content="YES">
+    <meta name="format-detection" content="telephone=no">
     <title>仿手机QQ</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/normalize/8.0.0/normalize.min.css">
   </head>
